Added glowing item outline renderer, adjusted Gungnir to use new system, added new Xuihcoatl texture 8/24/26 - 4pm